# pyjitsu

./: LICENSE  README.md  pyproject.toml
src/pyjitsu/models/: moves.py  session.py
