[project]
name = "pyjitsu"
dynamic = ["version"]
description = "Jiu jitsu journal"
authors = [
    {name = "Ryan Shea", email = "rshea781@gmail.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",  
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "polars>=1.35.2",
    "pydantic>=2.12.4",
]

[tool.ruff.lint]
select = ["F", "E", "I", "W"]
ignore = ["F401"]

fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pandas>=2.3.3"
]
lint = [
    "ruff>=0.4.3"
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pdm.version]
source = "scm"
